Update norbitz API to 1.2.0
