# api-server/swagger_server/controllers/private_controller.py
@@ -1,11 +1,41 @@
 import connexion
 import six
 
+from swagger_server.models.order_message import OrderMessage  # noqa: E501
 from swagger_server.models.user import User  # noqa: E501
 from swagger_server import util, mongo_controls
 
 
-def load(username=None):  # noqa: E501
+def delete(username):  # noqa: E501
+    """Delete user&#39;s order history
+
+     # noqa: E501
+
+    :param username: Username
+    :type username: str
+
+    :rtype: None
+    """
+    ret = mongo_controls.get_db().users.find_one({
+        'username': username
+    })
+
+    if ret is None:
+        return "Invalid username", 400
+
+    mongo_controls.get_db().users.update_one(
+        {
+            'username': username
+        },
+        {
+            "$set": {
+                "orders": []
+            }
+        }
+    )
+
+
+def load(username):  # noqa: E501
     """Load user data
 
     Load your data with this endpoint. # noqa: E501
@@ -20,26 +50,26 @@ def load(username=None):  # noqa: E501
     })
 
     if ret is not None:
-        return User(ret['username'], ret['userdata'])
+        return User(ret['username'], ret['orders'])
     else:
         return "Invalid username", 400
 
 
-def save(user=None):  # noqa: E501
-    """Save user data
+def save(orderMessage):  # noqa: E501
+    """Save order data
 
-    Save your data with this endpoint. # noqa: E501
+    Save an order data entry with this endpoint. # noqa: E501
 
-    :param user: User
-    :type user: dict | bytes
+    :param orderMessage: Order information
+    :type orderMessage: dict | bytes
 
     :rtype: None
     """
     if connexion.request.is_json:
-        user = User.from_dict(connexion.request.get_json())  # noqa: E501
+        orderMessage = OrderMessage.from_dict(connexion.request.get_json())  # noqa: E501
 
     ret = mongo_controls.get_db().users.find_one({
-        'username': user.username
+        'username': orderMessage.username
     })
 
     if ret is None:
@@ -47,11 +77,11 @@ def save(user=None):  # noqa: E501
 
     mongo_controls.get_db().users.update_one(
         {
-            'username': user.username
+            'username': orderMessage.username
         },
         {
-            '$set': {
-                'userdata': user.userdata
+            '$push': {
+                'orders': orderMessage.order
             }
         }
     )
